--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 logging:
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
+spring:
+  rabbitmq:
+    host: 192.168.125.100 # rabbitMQ的ip地址
+    port: 5672 # 端口
+    username: yepianer
+    password: 123456
+    virtual-host: /
